openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: springboot-tekton
    app.kubernetes.io/component: springboot-tekton
    app.kubernetes.io/instance: springboot-tekton
    app.kubernetes.io/name: springboot-tekton
  name: springboot-tekton
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: springboot-tekton
  sessionAffinity: None
  type: ClusterIP
